Change C logo image

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 
       <!-- C / C++ -->
         <div class="skill-card language">
-        <img src="c logo.jpg" alt="C Logo">
+        <img src="c logo bg.png" alt="C Logo">
         <p>C Language</p>
         </div>
 
