--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
         <div class="col-md-5 col-10 mt-3 mt-md-0" data-aos="slide-left">
           <div class="about-me-info">
              <p>
-              My name is <b>Dharmendra Suthar</b>, and I am a passionate
+              I’m <b>Dharmendra Suthar</b>, and I am a passionate
               <b>Frontend Developer</b>. I love combining design and technology
               to create modern, responsive, and user-friendly applications.
             </p>
